<resources>
    <string name="app_name">Truy xuất nguồn gốc</string>
    <string name="app_slogan">Hệ thống truy xuất nguồn gốc</string>
    <string name="hint_password">Mật khẩu </string>
    <string name="hint_password_confirm">Nhập lại mật khẩu </string>
    <string name="product_hot">Sản phẩm nổi bật </string>
    <string name="title_non_value">Chưa cập nhật </string>
    <string name="error_qr">Sản phẩm không tồn tại </string>
    <string name="title_qr">QR Code của sản phẩm </string>
    <string name="title_introduction">By Hưng </string>
    <string name="title_send">Gửi lại </string>
    <string name="title_resend">Bạn chưa nhận được mã? </string>
    <string name="title_verify">Mã xác nhận Email </string>
    <string name="title_login">Đăng nhập </string>
    <string name="title_signup">Đăng ký </string>
    <string name="title_signup_employee">Đăng ký nhân viên </string>
    <string name="title_confirm">Xác nhận </string>
    <string name="title_cancel">Hủy</string>
    <string name="title_delete">Xóa</string>
    <string name="title_update">Chỉnh sửa</string>
    <string name="title_question_account1">Bạn chưa có tài khoản? </string>
    <string name="title_question_account2">Đăng ký </string>
    <string name="title_name">Họ và tên </string>
    <string name="title_type">Loại thành viên </string>
    <string name="title_choice">Vui lòng chọn </string>
    <string name="title_symbol"> * </string>
    <string name="title_input_password"> Nhập mật khẩu </string>
    <string name="title_input_name"> Nhập họ và tên </string>
    <string name="title_email"> Email </string>
    <string name="title_address"> Địa chỉ </string>
    <string name="title_phone"> Số ĐT </string>
    <string name="title_web"> Website </string>
    <string name="title_input_email"> Email </string>
    <string name="title_input_verify">Nhập mã xác thực tài khoản</string>
    <string name="title_type_farmer">Nông dân  </string>
    <string name="title_type_customer">Khách hàng  </string>
    <string name="title_type_manager">Quản lý </string>
    <string name="title_question_type">Chọn loại thành viên  </string>
    <string name="title_error_empty">Vui lòng không bỏ trống dữ liệu  </string>
    <string name="title_error_length_pass">Độ dài mật khẩu phải lớn hơn 6 kí tự  </string>
    <string name="title_error_incorrect_pass"> Xác nhận mật khẩu không đúng </string>
    <string name="title_error_incorrect_code"> Mã xác nhận không đúng </string>
    <string name="title_error_email"> Email không hợp lệ </string>
    <string name="title_error_sendOTP"> Đang có lỗi trong quá trình gửi mã </string>
    <string name="title_success_sendOTP"> Đã gửi mã thành công vui lòng kiểm tra </string>
    <string name="title_error_sign_up"> Đăng ký thấy bại. Vui lòng kiểm tra lại </string>
    <string name="title_administrator"> Administrator </string>
    <string name="title_choice_image_category"> Hãy chọn ảnh cho danh mục </string>
    <string name="title_input_name_category"> Nhập tên cho danh mục </string>
    <string name="title_input_name_balance"> Nhập đơn vị </string>
    <string name="title_input_name_type_factory"> Nhập tên loại cơ sở </string>
    <string name="title_add_category"> Thêm danh mục </string>
    <string name="title_update_category"> Chỉnh sửa danh mục </string>
    <string name="title_delete_category"> Xóa danh mục </string>
    <string name="title_update_accept"> Thay đổi quyền truy cập </string>
    <string name="title_question_delete_category"> Bạn có chắc là xóa danh mục này không </string>
    <string name="title_scale"> Đơn vị tính </string>
    <string name="title_banner"> Banner </string>
    <string name="title_insert_banner">Thêm Banner </string>
    <string name="title_change_password"> Đổi mật khẩu </string>
    <string name="title_type_factory"> Loại cơ sở </string>
    <string name="title_log_out"> Đăng xuất </string>
    <string name="title_message"> Tin nhắn </string>
    <string name="title_price"> Giá </string>
    <string name="title_quantity">Số lượng </string>
    <string name="title_balance">Đơn vị </string>
    <string name="title_error_empty_user">Đang cập nhật </string>
    <string name="title_add_balance">Thêm đơn vị tính </string>
    <string name="title_add_type_factory">Thêm loại cơ sở </string>
    <string name="title_update_type_factory">Cập nhật loại cơ sở </string>
    <string name="title_update_balance">Chỉnh sửa đơn vị tính </string>
    <string name="title_delete_balance"> Xóa đơn vị tính </string>
    <string name="title_delete_type_factory"> Xóa loại cơ sở </string>
    <string name="title_question_delete_balance"> Bạn có chắc là xóa đơn vị này không </string>
    <string name="title_question_delete_tFactory"> Bạn có chắc là xóa loại cơ sở này không </string>
    <string name="title_password_old"> Mật khẩu cũ </string>
    <string name="title_input_password_old"> Nhập mật khẩu cũ </string>
    <string name="title_password_new"> Mật khẩu mới </string>
    <string name="title_input_password_new"> Nhập mật khẩu mới </string>
    <string name="title_employee_product"> Nhân viên quản lý </string>
    <string name="title_non_employee"> Chưa chỉ định nhân viên quản lý sản phẩm </string>
    <string name="menu_category_admin"> Danh mục </string>
    <string name="menu_account_admin"> Tài khoản </string>
    <string name="menu_setting_admin"> Cài đặt </string>
    <string name="menu_home_farmer"> Trang chủ </string>
    <string name="menu_message_farmer"> Tin nhắn </string>
    <string name="menu_order_farmer"> Đơn hàng </string>
    <string name="menu_setting_farmer"> Cá nhân </string>
    <string name="products_manager"> Sản phẩm </string>
    <string name="setting_manager"> Cài đặt </string>
    <string name="menu_home_customer"> Trang chủ </string>
    <string name="menu_setting_customer"> Cá nhân </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inCorrectPassOld"> Mật khẩu cũ không đúng </string>
    <string name="inCorrectPassConfirm"> Mật khẩu nhập lại không chính xác </string>
    <string name="inCorrectPassLength"> Độ dài mật khẩu phải hơn 6 kí tự </string>
    <string name="question_sign_out"> Bạn có chắc muốn đăng xuất không? </string>
    <string name="name_farm"> Tên vườn </string>
    <string name="product_farm"> Sản phẩm </string>
    <string name="empty_product"> Hiện tại chưa có sản phẩm nào </string>
    <string name="detail_product">Chi tiết sản phẩm </string>
    <string name="history_product">Nhật ký sản phẩm </string>
    <string name="seen_history_product">Xem nhật ký sản phẩm </string>
    <string name="supply_chain">Chuỗi cung ứng sản phẩm </string>
    <string name="title_supply_chain">Chuỗi cung ứng</string>
    <string name="choice_image_product"> Hãy chọn ảnh cho sản phẩm </string>
    <string name="insert_product">Thêm sản phẩm</string>
    <string name="name_product">Tên sản phẩm</string>
    <string name="input_name_product">Nhập tên sản phẩm</string>
    <string name="price_product">Giá sản phẩm</string>
    <string name="input_price_product">Nhập giá sản phẩm</string>
    <string name="description_product">Mô tả sản phẩm</string>
    <string name="input_description_product">Nhập mô tả sản phẩm</string>
    <string name="quantity_product">Số lượng</string>
    <string name="input_quantity_product">Nhập số lượng sản phẩm</string>
    <string name="title_choice_option">Các lựa chọn</string>
    <string name="choice_category_product">Chọn danh mục cho sản phẩm</string>
    <string name="choice_balance_product">Chọn đơn vị tính cho sản phẩm</string>
    <string name="choice_employee_product">Chọn nhân viên phụ trách</string>
    <string name="ingredient_product">Thành phần</string>
    <string name="input_ingredient_product">Nhập thành phần sản phẩm</string>
    <string name="use_product">Công dụng </string>
    <string name="input_use_product">Nhập công dụng sản phẩm</string>
    <string name="guide_product">Hướng dẫn sử dụng</string>
    <string name="input_guide_product">Nhập hướng dẫn sử dụng</string>
    <string name="condition_product">Điều kiện bảo quản</string>
    <string name="input_condition_product">Nhập điều kiện bảo quản</string>
    <string name="quantity_sold_product">Đã bán</string>
    <string name="date_product">Ngày đăng</string>
    <string name="close">Đóng </string>
    <string name="insert_history">Thêm nhật ký </string>
    <string name="update_history">Chỉnh sửa nhật ký </string>
    <string name="delete_product">Xóa sản phẩm </string>
    <string name="question_delete_product">Bạn có chắc xóa sản phẩm này không </string>
    <string name="title_delete_history"> Xóa nhật ký </string>
    <string name="title_question_delete_history"> Bạn có chắc là xóa nhật ký này không </string>
    <string name="title_change_info"> Thay đổi thông tin </string>
    <string name="title_link_factory"> Thông tin cơ sở </string>
    <string name="title_info"> Thông tin cá nhân </string>
    <string name="title_employee"> Quản lý nhân viên </string>
    <string name="title_statistics"> Thống kê sản phẩm </string>
    <string name="owner_farm"> Người đại diện </string>
    <string name="input_owner_farm">Nhập tên người đại diện </string>
    <string name="input_name_farm">Nhập tên vườn </string>
    <string name="input_phone_farm">Nhập số điện thoại </string>
    <string name="input_address_farm">Nhập địa chỉ </string>
    <string name="choice_image_user"> Chọn ảnh đại diện mới </string>
    <string name="choice_factory_history"> Cơ sở hiện tại của sản phẩm </string>
    <string name="choice_factory_history2"> Chọn cơ sở </string>
    <string name="description"> Mô tả của nhật ký</string>
    <string name="title_author"> Thông tin người tạo nhật ký</string>
    <string name="choice_image_history">Thêm hình ảnh kiểm định </string>
    <string name="empty_factory"> Nhấp vào đây để thêm cơ sở liên kết </string>
    <string name="pick_camera"> Camera </string>
    <string name="pick_gallery"> Thư viện ảnh </string>
    <string name="filter_type_factory"> Chọn loại cơ sở </string>
    <string name="insert_factory"> Thêm cơ sở liên kết </string>
    <string name="update_factory"> Cập nhật cơ sở </string>
    <string name="name_factory"> Tên cơ sở </string>
    <string name="input_name_factory">Nhập tên cơ sở </string>
    <string name="input_web_factory">Nhập tên website </string>
    <string name="current_factory">Cơ sở hiện tại </string>
    <string name="other_factory">Cơ sở khác </string>
    <string name="info_factory">Thông tin cơ sở </string>
    <string name="change_info_factory">Thay đổi thông tin </string>
    <string name="title_delete_factory"> Xóa cơ sở liên kết </string>
    <string name="title_question_delete_factory"> Bạn có chắc là xóa cơ sở này không </string>
    <string name="title_detail_history"> Chi tiết nhật ký </string>
    <string name="title_detail"> Thông tin chi tiết  </string>
    <string name="manager_image_history"> Quản lý hình ảnh </string>
    <string name="image_new"> Hình ảnh mới </string>
    <string name="input_new_image"> Thêm hình ảnh mới </string>
    <string name="title_image_detail"> Hình ảnh </string>
    <string name="delete_image"> Xóa hình ảnh </string>
    <string name="question_delete_image"> Bạn có chắc là xóa hình này không </string>
    <string name="update_des"> Cập nhật mô tả </string>
    <string name="no_images"> Bạn chưa chọn hình ảnh mới </string>
    <string name="title_filter_dialog"> Lựa chọn thống kê </string>
    <string name="filter_category"> Thống kê theo danh mục </string>
    <string name="filter_farmer"> Thống kê theo nhà vườn </string>
    <string name="statistic_day"> Theo ngày lựa chọn </string>
    <string name="statistic_changed"> Đã chuyển đi </string>
    <string name="statistic_employee"> Theo nhân viên </string>
</resources>