<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ChangeInfoFactoryActivity"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/custom_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/coiny"
            android:text="@string/change_info_factory"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/img_Close_Factory"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:backgroundTint="@null"
            android:src="@drawable/ic_close" />
    </RelativeLayout>

<!--    1 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20sp"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_symbol"
            android:textColor="@color/red"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_factory"
            android:layout_marginStart="3dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/edt_Name_Factory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_name_factory"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:background="@drawable/custom_edittext"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawablePadding="10dp"
        />

<!--    2 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_symbol"
            android:textColor="@color/red"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner_farm"
            android:layout_marginStart="3dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/edt_Owner_Factory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_owner_farm"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:background="@drawable/custom_edittext"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawablePadding="10dp"
        />
<!--    3 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_symbol"
            android:textColor="@color/red"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_address"
            android:layout_marginStart="3dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/edt_Address_Factory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_address_farm"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:background="@drawable/custom_edittext"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawablePadding="10dp"
        />
<!--    4 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_symbol"
            android:textColor="@color/red"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_phone"
            android:layout_marginStart="3dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/edt_Phone_Factory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_phone_farm"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:background="@drawable/custom_edittext"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawablePadding="10dp"
        android:inputType="number"
        tools:ignore="TextFields" />
<!--     5 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_symbol"
            android:textColor="@color/red"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_web"
            android:layout_marginStart="3dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/edt_Website_Factory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_web_factory"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:background="@drawable/custom_edittext"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawablePadding="10dp"
        />

    <Button
        android:id="@+id/btn_Confirm_Change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_confirm"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:backgroundTint="@null"
        app:backgroundTint="@null"
        android:background="@drawable/custom_button_confirm"
        />
</LinearLayout>