<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ChangeInfoActivity"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/custom_toolbar"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/coiny"
            android:text="@string/title_change_info"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/img_Back_ChangeInfo_Farmer"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_back" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/img_ChangeInfo_Farmer"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choice_image_user"
        android:gravity="center"
        android:layout_marginTop="5dp"
        />



<!--    2 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_symbol"
            android:textColor="@color/red"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner_farm"
            android:layout_marginStart="3dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/edt_Owner_ChangeInfo_Farmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_owner_farm"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:background="@drawable/custom_edittext"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        />

<!--    4   -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_symbol"
            android:textColor="@color/red"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_email"
            android:layout_marginStart="3dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/edt_Email_ChangeInfo_Farmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_input_email"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:background="@drawable/custom_edittext"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        />

<!--    5-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_symbol"
            android:textColor="@color/red"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_address"
            android:layout_marginStart="3dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/edt_Address_ChangeInfo_Farmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_address_farm"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:background="@drawable/custom_edittext"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/btn_Confirm_ChangeInfo_Farmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@null"
        app:backgroundTint="@null"
        android:background="@drawable/custom_button_confirm"
        android:text="@string/title_confirm"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        />

</LinearLayout>