<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:id="@+id/layout_History"
    >


    <TextView
        android:id="@+id/txt_Date_History"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_button_confirm"
        android:padding="5dp"
        android:text="@string/date_product"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/img_itemHistory"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:layout_below="@id/txt_Date_History"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_Date_History"
        android:layout_toEndOf="@id/txt_Date_History"
        android:orientation="vertical"
        android:layout_margin="5dp"
        >

        <TextView
            android:id="@+id/txt_TypeFactory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_type_factory"
            android:textColor="@color/green2"
            android:textStyle="bold"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/txt_NameFactory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_farm"
            android:textColor="@color/green"
            android:layout_marginTop="3dp"
            />

        <TextView
            android:id="@+id/txt_AddressFactory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_address"
            android:layout_marginTop="3dp"

            />
        <TextView
            android:id="@+id/txt_DesProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_product"
            android:layout_marginTop="3dp"
            android:textColor="@color/black"
            />
    </LinearLayout>

</RelativeLayout>