<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.InsertFactoryActivity"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/custom_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/coiny"
            android:text="@string/insert_factory"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/img_Back_InsertFactory"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:background="@null"
            android:backgroundTint="@null"
            android:src="@drawable/ic_back" />

        <ImageView
            android:id="@+id/img_InsertFactory"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:backgroundTint="@null"
            android:src="@drawable/ic_check" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_ChoiceTypeFactory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20sp"
        android:gravity="center_vertical"
        android:text="@string/choice_factory_history2"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="8dp"
        app:drawableEndCompat="@drawable/ic_right" />

    <TextView
        android:id="@+id/txt_ResultChoiceTypeFactory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20sp"
        android:padding="8dp"
        android:text="@string/choice_category_product"
        android:textSize="15sp"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_symbol"
            android:textColor="@color/red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/name_factory"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_Name_Factory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_edittext"
        android:drawablePadding="10dp"
        android:hint="@string/input_name_factory"
        android:padding="10dp"
        android:textSize="16sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_symbol"
            android:textColor="@color/red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/title_phone"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_Phone_Factory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_edittext"
        android:drawablePadding="10dp"
        android:hint="@string/input_phone_farm"
        android:padding="10dp"
        android:textSize="16sp"
        android:inputType="number"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_symbol"
            android:textColor="@color/red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/title_address"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_Address_Factory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_edittext"
        android:drawablePadding="10dp"
        android:hint="@string/input_address_farm"
        android:padding="10dp"
        android:textSize="16sp" />
</LinearLayout>